--- a/styles.css
+++ b/styles.css
@@ -24,8 +24,8 @@ body {
 }
 
 .logo {
-  height: 100px;
-  width: 100px;
+  height: 150px;
+  width: 150px;
 }
 
 .information {
@@ -36,11 +36,13 @@ body {
 
 .cover {
   position: relative;
+  display: flex;
+  justify-content: center;
 }
 
 .cover-image {
   height: auto;
-  width: 100%;
+  width: 95%;
   display: block;
 }
 
@@ -64,7 +66,10 @@ p {
 .contact {
   display: flex;
   justify-content: space-around;
-  margin: 2%;
+  margin: 2% 0 2% 0;
+  hr {
+    width: 100%;
+  }
 }
 
 .footer {
