--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
   background-color: black;
-  color: aliceblue;
+  color: rgb(240, 248, 255);
   margin: 0;
   font-family: 'Metropolis', sans-serif;
   font-weight: 300;
@@ -19,19 +19,15 @@ body {
 }
 
 .nav {
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 0;
 }
 
 .logo {
   height: 150px;
   width: 150px;
-}
-
-.information {
-  display: flex;
-  flex-direction: column;
-  /* margin: 0 2% 0 2%; */
 }
 
 .cover {
@@ -48,15 +44,48 @@ body {
 
 .about {
   font-weight: 100;
-  font-size: x-small;
+  font-size: small;
   position: absolute;
   top: 75%;
-  left: 5%;
+  left: 10%;
   transition: font-size 0.3s ease;
+  /* offset-x | offset-y | blur-radius | color */
+  text-shadow: 1px 1px 2px black;
 }
 
 .about:hover {
-  font-size: larger;
+  font-size: large;
+}
+
+.appointment {
+  position: absolute;
+  top: 75%;
+  left: 75%;
+}
+
+@media screen and (max-width: 680px) {
+  .about {
+    font-weight: 100;
+    font-size: x-small;
+    position: absolute;
+    top: 65%;
+    left: 5%;
+    transition: font-size 0.3s ease;
+  }
+  .about:hover {
+    font-size: x-small;
+  }
+  .information {
+    font-size: xx-small;
+  }
+}
+.information {
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+  /* flex-direction: column; */
+  align-items: center;
+  margin: 3% 0 3% 0;
 }
 
 p {
@@ -69,6 +98,18 @@ p {
   margin: 2% 0 2% 0;
   hr {
     width: 100%;
+  }
+}
+
+.address {
+  display: flex;
+  justify-content: center;
+  margin: 2% 0 2% 0;
+  .writtenAddress {
+    justify-content: center;
+    align-self: center;
+    text-align: center;
+    margin: 5%;
   }
 }
 
@@ -97,11 +138,9 @@ hr {
 }
 
 #brands {
-  /* img {
-    height: auto;
-    width: 20rem;
-    margin-top: 10px;
-  } */
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .brand1 {
