--- a/styles.css
+++ b/styles.css
@@ -59,10 +59,30 @@ body {
 
 .appointment {
   position: absolute;
-  top: 75%;
+  top: 77%;
   left: 75%;
+  background-color: transparent;
+  color: white;
+  border: 2px solid white;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
 }
 
+.appointment:hover {
+  background-color: white;
+  font-size: 16px;
+  color: black;
+}
+
+a {
+  text-decoration: none;
+}
 @media screen and (max-width: 680px) {
   .about {
     font-weight: 100;
