--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ body {
   background-color: transparent;
   color: white;
   border: 2px solid white;
-  padding: 10px 20px;
+  padding: 1em 0.1em;
   font-size: 16px;
   cursor: pointer;
   transition: background-color 0.3s, color 0.3s;
